src/scss/admin/settings.scss
@import '../common/functions';
@import '../common/mixins';
@import '../common/variables';
@import '_properties';

// ===============================================================================
// NOTICES AND WP CONTENT
// ===============================================================================

#wpcontent {
  position: relative;
  padding-left: 0 !important;

  .notice {
    --this-top-offset: 48px;
    position: absolute !important;
    top: calc(10px + var(--this-top-offset, 0));
    left: 20px;
    right: 20px;
    margin: 0;
    box-shadow: 0 3px 4px 1px rgb(0 0 0 / 35%);

    @include bp(601px) {
      --this-top-offset: 0px;
    }

    + .notice {
      top: calc(60px + var(--this-top-offset, 0));

      + .notice {
        top: calc(110px + var(--this-top-offset, 0));

        + .notice {
          top: calc(160px + var(--this-top-offset, 0));
        }
      }
    }
  }
}

// ===============================================================================
// SETTINGS PAGES
// ===============================================================================

body[class*="fictioneer_page_"] {
  #screen-meta-links {
    position: absolute;
    right: 20px;
    float: none;
    margin: 0;

    @media screen and (max-width: 782px) {
      right: 10px;
    }

    + .fictioneer-settings .fictioneer-settings__header {
      padding-top: 40px;
    }

    .show-settings {
      border: none;
    }
  }

  #screen-meta {
    background: var(--header-background-color);
    padding: 0 20px;
    margin: 0;
    border: 0;

    @media screen and (max-width: 782px) {
      padding: 0 10px;
    }
  }

  #screen-options-wrap {
    background: #fff;
  }
}
/* ... */

